--- a/ipu/templates/college/dsessions_snippet.html
+++ b/ipu/templates/college/dsessions_snippet.html
@@ -22,6 +22,7 @@
 			{% if filtering %}
 				<b><h1 class="center flow-text teal-text text-accent-4">No dummy sessions found that match the filtering conditions.</h1></b>
 			{% else %}
+				<p class="blue-text text-darken-4 center-align">All your <b>Dummy</b> Internship or Job placement sessions, that you create will be displayed here.<br><br><b>Dummy Sessions</b> are placement drives that you post on behalf of a company that has registered on the platform.<br>To create a dummy session, go to "Manage Dummy Company" from <i class="pink-text material-icons">menu</i> on top right corner.<br><b>HOWTO:</b> You'll need to create a dummy company and then create a dummy session with it.</p>
 				<b><h1 class="center flow-text teal-text text-accent-4">You have not created any dummy sessions.</h1></b>
 			{% endif %}
 		{% endfor %}
