--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -38,9 +38,9 @@
 </style>
 
 
-<div class="container">
-	<p style="font-size: 17px" class="flow-text col s12 blue-text text-darken-4 blue lighten-5"><b>Note: </b>Before creating placement session/drive with a company, we urge you to check the company's authenticity by searching for its name on the <a target="_blank" href="http://mca.gov.in/mcafoportal/showCheckCompanyName.do"><b>Ministry of Corporate Affairs website</b></a> and matching the correct <b>LLPIN/CIN/Form 1 Ref. No.</b><br>If you find any company to be fradulent, please <b>block and report</b> it.<br>(You can access these facilities by clicking on <i class="material-icons">menu</i> on the top right corner.)</p>
-	<div class="col s8 offset-s2 request-content">
+<div class="row">
+	<p style="font-size: 17px" class="flow-text col s12 m10 offset-m1 blue-text text-darken-4 blue lighten-5"><b>Note: </b>Before creating placement session/drive with a company, we urge you to check the company's authenticity by searching for its name on the <a target="_blank" href="http://mca.gov.in/mcafoportal/showCheckCompanyName.do"><b>Ministry of Corporate Affairs website</b></a> and matching the correct <b>LLPIN/CIN/Form 1 Ref. No.</b><br>If you find any company to be fradulent, please <b>block and report</b> it.<br>(You can access these facilities by clicking on <i class="material-icons">menu</i> on the top right corner.)</p>
+	<div class="col s12 m10 offset-m1 l8 offset-l2 request-content">
 		{% for ass in associations %}
 			<div class="col s12 card-panel teal lighten-4 center-align">
 				<span class="card-title" id="heading">Association Request</span>
