--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -57,14 +57,13 @@
  {% endblock %}
 
 {% block menu_icon_dropdown %}
-<!--	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Add Faculty</a></li>-->
 	<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
 	<li class="divider"></li>
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
 	<li class="divider"></li>
 	<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
 	<li class="divider"></li>
-	<li><a href="#">Report</a></li>
+	<li><a href="#">Report Admin</a></li>
 {% endblock %}
 
 {% block user_type %}
@@ -86,18 +85,32 @@
 {% block side_nav_links %}
     <li data-main_div="#associate"><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
           Associate Companies</a></li>
-    <li data-main_div="#requests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
+    <li id="m-request" data-main_div="#requests" data-url="/college/association_requests/"><a class="waves-effect" href="#requests"><i class="fa fa-envelope" aria-hidden="true"></i> 
           Association Requests</a></li>
-    <li data-main_div="#myrequests"><a class="waves-effect" href="#!"><i class="fa fa-envelope" aria-hidden="true"></i> 
+    <li id="m-myrequest" data-main_div="#myrequests" data-url="/recruitment/myrequests/"><a class="waves-effect" href="#myrequests"><i class="fa fa-envelope" aria-hidden="true"></i> 
           My Requests</a></li>
-    <li data-main_div="#notifications"><a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications</a></li>     
-    <li data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>Sessions</a></li>
     
+	<li class="no-padding">
+		<ul class="collapsible collapsible-accordion">
+			<li data-main_div="#notifications" class="expandable">	
+				<a class="collapsible-header"><i class="fa fa-bell" aria-hidden="true"></i>Notifications {% if badge %}<span class="new badge">{{ badge }}</span>{% endif %}</a>
+				<div class="collapsible-body" style="padding: 0 !important;">
+					<ul>
+						<li class="child-li" data-child_div="#your-notifications-div"><a id="m-your-notifications" detail-url="{% url 'notification_detail' %}" href="#!"><i></i>Your Notifications</a></li>
+						<li class="child-li" data-child_div="#notify-students-div"><a id="m-create-notifications" href="#!"><i></i>Notify Students</a></li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</li>
+
+    <li id="m-session" data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>Sessions</a></li>
+
 	<li class="no-padding">
 		<ul class="collapsible collapsible-accordion">
 			<li data-main_div="#settings" class="expandable">
 				<a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>Settings</a>
-				<div class="collapsible-body">
+				<div class="collapsible-body" style="padding: 0 !important;">
 					<ul>
 						<li class="child-li" data-child_div="#account-settings"><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>Account Settings</a></li>
 						<li class="child-li" data-child_div="#profile-settings"><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>Profile Settings</a></li>
@@ -107,15 +120,22 @@
 			</li>
 		</ul>
 	</li>
+    
+	<li><div class="divider"></div></li>
+	<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
+	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+	<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
+	<li><a href="#">Report Admin</a></li>
+	<li><div class="divider"></div></li>
 {% endblock %}
 
 {% block tabs%}
-	<li class="tab col s2"><a class="active" href="#associate">Associate With Companies</a></li>
+	<li class="tab col s2"><a style="font-size: 11px !important;" class="active" href="#associate">Associate With Companies</a></li>
 	<li id = "request" class="tab col s2" data-url="/college/association_requests/"><a href="#requests">Association Requests</a></li>
 	<li id = "myrequest" class="tab col s2" data-url="/recruitment/myrequests/"><a href="#myrequests">My Requests</a></li>
 	<li id = "notification" class="tab col s2" url="{% url 'select_streams' %}"><a id="notification-anchor" href="#notifications">Notification</a></li>
-	<li class="tab col s2"><a href="#settings">Settings</a></li>
 	<li id="session" class="tab col s2"><a href="#sessions_div">Sessions</a></li>
+	<li class="tab col s2"><a href="#settings">Settings</a></li>
 {% endblock %}
 
 {% block tabs_content %}
