--- a/ipu/templates/company/association_requests.html
+++ b/ipu/templates/company/association_requests.html
@@ -38,9 +38,9 @@
 </style>
 
 
-<div class="container">
+<div class="row">
 	<p style="font-size: 17px" class="flow-text col s12 blue-text text-darken-4 blue lighten-5 center-align"><b>Note: </b>Salary cannot be changed later on. If you wish to negotiate with the college, please decline the request and mention this reason. You can also initiate a request with your terms.</p>
-	<div class="col s8 offset-s2 request-content">
+	<div class="col s12 m10 offset-m1 l8 offset-l2 request-content">
 		{% for ass in associations %}
 			<div class="col s12 card-panel teal lighten-4 center-align">
 				<span class="card-title" id="heading">Association Request</span>
