--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -90,25 +90,42 @@
 {% endblock %}
 
 {% block side_nav_links %}
+<!--
 	{% if edit_profile_form %}
 		<li data-main_div="#profile"><a class="waves-effect" href="#!"><i class="fa fa-user" aria-hidden="true"></i>Update Profile*</a></li>
 	{% endif %}
 	{% if edit_qual_form %}
 		<li data-main_div="#qualifications"><a class="waves-effect" href="#!"><i class="fa fa-book" aria-hidden="true"></i>Update Qualifications*</a></li>  
 	{% endif %}
-	<li data-main_div="#companies"><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>Companies Visiting</a></li>
-	<li data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i> Sessions</a></li>
-	<li data-main_div="#notifications"><a class="waves-effect" href="#!">
-		<i class="fa fa-bell" aria-hidden="true"></i>Notifications<span class="new badge" id="mobile-noti-badge">1</span></a>
+-->
+	<li id="m-apply" data-main_div="#companies"><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>Companies Visiting</a></li>
+	<li id="m-session" data-main_div="#sessions_div"><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i> Sessions</a></li>
+<!--	<li id="m-notification" data-main_div="#notifications">
+		<a class="waves-effect" href="#!"><i class="fa fa-bell" aria-hidden="true"></i>Notifications{% if badge %}<span class="new badge">{{ badge }}</span>{% endif %}</a>
+	</li>-->
+	<li class="no-padding">
+		<ul class="collapsible collapsible-accordion">
+			<li data-main_div="#notifications" class="expandable">	
+				<a class="collapsible-header"><i class="fa fa-bell" aria-hidden="true"></i>Notifications{% if badge %}<span class="new badge">{{ badge }}</span>{% endif %}</a>
+				<div class="collapsible-body" style="padding: 0 !important;">
+					<ul>
+						<li class="child-li" data-child_div="#your-notifications-div"><a id="m-your-notifications" detail-url="{% url 'notification_detail' %}" href="#!"><i></i>Your Notifications</a></li>
+						<li class="child-li" data-child_div="#help-div"><a id="m-help" href="#!"><i></i>Report an Issue</a></li>
+						<li class="child-li" data-child_div="#view-issues-div"><a id="m-view-issues" url="{% url 'view_solution_list' %}" href="#!"><i></i>Your Issues</a></li>
+					</ul>
+				</div>
+			</li>
+		</ul>
 	</li>
+
 	<li class="no-padding">
 		<ul class="collapsible collapsible-accordion">
 			<li data-main_div="#settings" class="expandable">
 				<a class="collapsible-header"><i class="fa fa-cog" aria-hidden="true"></i>Settings</a>
-				<div class="collapsible-body">
+				<div class="collapsible-body" style="padding: 0 !important;">
 					<ul>
 						<li class="child-li" data-child_div="#account-settings"><a href="#!"><i class="fa fa-sliders" aria-hidden="true"></i>Account Settings</a></li>
-						<li class="child-li" data-child_div="#upload-settings"><a href="#!"><i class="fa fa-upload" aria-hidden="true"></i>Upload Image/Resume</a></li>
+						<li class="child-li" data-child_div="#upload-settings"><a href="#!"><i class="fa fa-upload" aria-hidden="true"></i>Upload Resume/Photo</a></li>
 						<li class="child-li" data-child_div="#social-settings"><a href="#!"><i class="fa fa-users" aria-hidden="true"></i>Social Profile Settings</a></li>
 						<li class="child-li" data-child_div="#tech-settings"><a href="#!"><i class="fa fa-wrench" aria-hidden="true"></i>Technical Profile Settings</a></li>
 					</ul>
@@ -116,25 +133,32 @@
 			</li>
 		</ul>
 	</li>
+    <li><div class="divider"></div></li>
+    {% if student.resume %}
+	    <li><a href="javascript:void(0)" onclick="document.getElementById('light4').style.display='flex';document.getElementById('fade4').style.display='flex'">View Resume</a></li>
+    {% endif %}
+	<li><a href="javascript:void(0)" onclick="document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>
+	<li><a class="waves-effect" id="m-report-form-anchor" href="{% url 'report' %}">Contact Admin</a></li>
 {% endblock %}
 
 {% block tabs %}
+<!--
 	{% if edit_profile_form %}
 		<li class="tab col s2"><a href="#profile" style="color: #9c27b0 !important">Update Profile*</a></li>
 	{% endif %}
 	{% if edit_qual_form %}
 		<li class="tab col s2"><a href="#qualifications" style="color: #9c27b0 !important">Update Qualifications*</a></li>
 	{% endif %}
+-->
 	<li id="apply" class="tab col s2"><a class="active" href="#companies">Companies Visiting</a></li>
 <!--	<li class="tab col s2"><a href="#tab2">Status</a></li> -->
 	<li id = "notification" class="tab col s2" url="{% url 'submit_issue' %}"><a href="#notifications">Notification</a></li>
-	<li class="tab col s2"><a href="#settings">Settings</a></li>
 	<li id="session" class="tab col s2"><a href="#sessions_div">Sessions</a></li>
+	<li class="tab col s2"><a href="#settings">Settings</a></li>
 {% endblock %}
 
 {% block tabs_content %}
 	<div id="companies" class="col s12"></div>
-<!--	<div id="tab2" class="col s12">Data 2</div> -->
 		<div id="notifications" class="col s12">
 		<div class="vertical-tabs">
 			<div class="row">
