--- a/ipu/templates/student/mysessions.html
+++ b/ipu/templates/student/mysessions.html
@@ -1,8 +1,4 @@
 {% load staticfiles %}
-<!--
-<script src="{% static 'material/js/jquery-2.2.0.js' %}"></script>
-<script src="{% static 'material/js/materialize.js' %}"></script>
--->
 {% if sessions %}
 <ul class="collection">
 	{% for session in sessions %}
@@ -24,5 +20,6 @@
 	{% endfor %}
 </ul>
 {% else %}
+	<p class="flow-text blue lighten-5 blue-text text-darken-4 center-align">All your placement sessions/drives, Internship or Job, that you enroll in, will be displayed here.<b></b></p>
 	<b><h1 class="center flow-text teal-text text-accent-4">You are currently not enrolled in any sessions.</h1></b>
 {% endif %}
