--- a/ipu/templates/college/dsessions_snippet.html
+++ b/ipu/templates/college/dsessions_snippet.html
@@ -1,4 +1,5 @@
 <div id="dsessions" class="scrollspy">
+	<h4 class="center" style="color: #337ab7; font-weight: 600">Dummy Sessions</h4>
 	<ul class="collection">
 		{% for dsession in dsessions %}
 			<li class="collection-item avatar" data-sess="{{ dsession.dsess_hashid }}">
