--- a/ipu/templates/company/home.html
+++ b/ipu/templates/company/home.html
@@ -96,6 +96,9 @@
           </li>
         </ul>
       </li>
+	<li><div class="divider"></div></li>
+	<li><a href="{% url 'manage_dissociation' %}">Block/Unblock Colleges</a></li>
+	<li><a href="#">Report Admin</a></li>
 {% endblock %}
 
 
