--- a/ipu/templates/dummy_company/manage_dummy_company.html
+++ b/ipu/templates/dummy_company/manage_dummy_company.html
@@ -22,11 +22,15 @@
 {% endblock %}
 
 {% block menu_icon_dropdown %}
+	{% if user.type == 'C' %}
                 <li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
                 <li class="divider"></li>
-                <li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
-                <li class="divider"></li>
                 <li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
+	{% elif user.type == 'F' %}
+    	{% if perms.recruitment.handle_placement %}
+		{% endif %}
+	{% else %}
+	{% endif %}
 {% endblock %}
 
 {% block user_email_id_s %}
@@ -139,19 +143,32 @@
  {% endblock %}
 
 {% block side_nav_links %}
-	<li><a class="waves-effect" href="#!"><i class="fa fa-home" aria-hidden="true"></i>
-            Home</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
-          Create Dummy Company</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-          Edit Dummy Company</a></li>      
-    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i> 
-          Create Dummy Session</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-pencil" aria-hidden="true"></i>
-	Edit Criteria</a></li>     
-    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
-            Dummy Sessions</a></li>
-         
+	<li class="no-padding">
+		<ul class="collapsible collapsible-accordion">
+			<li data-main_div="#createdc" class="expandable">
+				<a class="collapsible-header active">Dummy Company</a>
+				<div class="collapsible-body" style="padding: 0 !important;">
+					<ul>
+						<li class="child-li" data-child_div="#v-createdc"><a href="#!"><i></i>Create Dummy Company</a></li>
+						<li class="child-li" data-child_div="#v-editdc"><a href="#!"><i></i>Edit Dummy Company</a></li>
+					</ul>
+				</div>
+			</li>
+		</ul>
+	</li>
+
+    <li data-main_div="#createds"><a class="waves-effect" href="#!" style="">Create Dummy Session</a></li>
+    <li id="m-dsessions" data-main_div="#dsess"><a class="waves-effect" href="#!" style="">Dummy Sessions</a></li>
+	<li><div class="divider"></div></li>
+	{% if user.type == 'C' %}
+		<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
+		<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
+		<li><div class="divider"></div></li>
+	{% elif user.type == 'F' %}
+    	{% if perms.recruitment.handle_placement %}
+		{% endif %}
+	{% else %}
+	{% endif %}
 
     
 {% endblock %}
@@ -175,11 +192,11 @@
 			<div class="col s8 offset-s1">
 				<div class="col s12" id="v-createdc">
 					<h4 class="center" style="color: goldenrod;">Create Dummy Company</h4>
-					<form action="{% url 'create_dcompany' %}" method='POST' class="col s8 offset-s2" id="create-dummy-company-form">
+					<form action="{% url 'create_dcompany' %}" method='POST' class="col s12 m8 offset-m2" id="create-dummy-company-form">
 						{% csrf_token %}
 						{% form form=create_dummy_company_form %}{% endform %}
 						<div class="row">
-							<button class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Create Dummy Company</button>
+							<button class="btn btn-waves-light col s10 offset-s1" style="width: 80%">Create Dummy Company</button>
 						</div>
 					</form>
 				</div>
@@ -187,11 +204,11 @@
 			<div class="col s8 offset-s1" id="edit-forms-div">
 				<div class="col s12" id="v-editdc">
 					<h4 class="center" style="color: goldenrod;">Edit Dummy Company</h4>
-					<form action="{% url 'edit_dcompany_form' %}" method='POST' class="col s8 offset-s2" id="choose-dummy-company-form">
+					<form action="{% url 'edit_dcompany_form' %}" method='POST' class="col s12 m8 offset-m2" id="choose-dummy-company-form">
 						{% csrf_token %}
 						{% form form=choose_dummy_company_form %}{% endform %}
 						<div class="row">
-							<button class="btn btn-waves-light col s8 offset-s2" style="width: 80%">Choose This Company</button>
+							<button class="btn btn-waves-light col s10 offset-s1" style="width: 80%">Choose This Company</button>
 						</div>
 					</form>
 				</div>
@@ -218,13 +235,17 @@
 <!--                                     -->
 {% endblock tabs_content %}
 {% block scripts %}
+	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'dummy_company/create_session.js' %}"></script>
+	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
+			Search.init();
 			Settings.init(['create-dummy-company-form']);
 			DSession.init();
+			Mobile.init();
 		});
 	</script>
 {% endblock %}
