--- a/ipu/templates/dummy_company/manage_dummy_session.html
+++ b/ipu/templates/dummy_company/manage_dummy_session.html
@@ -3,16 +3,132 @@
 {% load material_form %}
 {% block title %}Manage Dummy Session{% endblock %}
 {% block pagetitle %}Manage Dummy Session{% endblock %}
+
+{% block user_photo2 %}
+	{% if request.user.type == 'C' %}
+		{% if association.college.photo %}
+			<img src="{{ association.college.photo.url }}" class="circle" height="30" width="30" id="img-corner">
+		{% else %}
+			<img src="{% static 'images/college.png' %}" class="circle" height="30" width="30" id="img-corner">
+		{% endif %}
+	{% elif request.user.type == 'F' %}
+		{% if request.user.faculty.photo %}
+			<img src="{{ request.user.faculty.photo.url }}" class="circle" height="30" width="30" id="img-corner">
+		{% else %}
+			<img src="{% static 'images/college.png' %}" class="circle" height="30" width="30" id="img-corner">
+		{% endif %}
+	{% else %}
+		{% if association.company.photo %}
+			<img src="{{ association.company.photo.url }}" class="circle" height="30" width="30" id="img-corner">
+		{% else %}
+			<img src="{% static 'images/company.png' %}" class="circle" height="30" width="30" id="img-corner">
+		{% endif %}
+	{% endif %}
+{% endblock %}
+
+{% block user_name_card_s %}
+	{{ user.get_short_name }}
+{% endblock %}
+
+{% block user_email_id_s %}
+	{{ user.profile.email }}
+{% endblock %}
+
+{% block user_photo_s %}
+	{% if request.user.type == 'C' %}
+		{% if association.college.photo %}
+			<img src="{{ association.college.photo.url }}" class="circle" height="90" width="90">
+		{% else %}
+			<img src="{% static 'images/college.png' %}" class="circle" height="90" width="90">
+		{% endif %}
+	{% elif request.user.type == 'F' %}
+		{% if request.user.faculty.photo %}
+			<img src="{{ request.user.faculty.photo.url }}" class="circle" height="90" width="90">
+		{% else %}
+			<img src="{% static 'images/college.png' %}" class="circle" height="90" width="90">
+		{% endif %}
+	{% else %}
+		{% if association.company.photo %}
+			<img src="{{ association.company.photo.url }}" class="circle" height="90" width="90">
+		{% else %}
+			<img src="{% static 'images/company.png' %}" class="circle" height="90" width="90">
+		{% endif %}
+	{% endif %}
+{% endblock %}
+
+{% block user_photo %}
+	{% if request.user.type == 'C' %}
+		{% if association.college.photo %}
+			<img src="{{ association.college.photo.url }}" class="circle" height="64" width="64">
+		{% else %}
+			<img src="{% static 'images/college.png' %}" class="circle" height="64" width="64">
+		{% endif %}
+	{% elif request.user.type == 'F' %}
+		{% if request.user.faculty.photo %}
+			<img src="{{ request.user.faculty.photo.url }}" class="circle" height="64" width="64">
+		{% else %}
+			<img src="{% static 'images/college.png' %}" class="circle" height="64" width="64">
+		{% endif %}
+	{% else %}
+		{% if association.company.photo %}
+			<img src="{{ association.company.photo.url }}" class="circle" height="64" width="64">
+		{% else %}
+			<img src="{% static 'images/company.png' %}" class="circle" height="64" width="64">
+		{% endif %}
+	{% endif %}
+{% endblock %}
+
+{% block user_name_card %}
+	{{ user.get_short_name }}
+{% endblock %}
+
+{% block user_email_id %}
+	{{ user.profile.email }}
+{% endblock %}
+
+
+
 {% block menu_icon_dropdown %}
+	{% if user.type == 'C' %}
                 <li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
+	{% elif user.type == 'F' %}
+    	{% if perms.recruitment.handle_placement %}
+			<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+    		<li class="divider"></li>
+		{% endif %}
+	{% else %}
+	{% endif %}
+
 {% endblock %}
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
 {% endblock head %}
+
+
+{% block side_nav_links %}
+    <li data-main_div="#dsession-details"><a class="waves-effect" href="#!" style="">Session Details</a></li>
+    <li data-main_div="#dsession-students"><a class="waves-effect" href="#!" style="">Manage Session Students</a></li>
+    <li data-main_div="#edit-criteria"><a class="waves-effect" href="#!" style="">Edit Selection Criteria</a></li>
+    <li data-main_div="#edit-dsession"><a class="waves-effect" href="#!" style="">Edit Session Details</a></li>
+	<li><div class="divider"></div></li>
+	{% if user.type == 'C' %}
+		<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
+		<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+		<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
+	{% elif user.type == 'F' %}
+    	{% if perms.recruitment.handle_placement %}
+			<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+			<li><div class="divider"></div></li>
+		{% endif %}
+	{% else %}
+	{% endif %}
+
+{% endblock %}
+
 
 {% block tabs %}
 	<li class="tab col s2"><a class="active" href="#dsession-details">Details</a></li>
@@ -20,6 +136,8 @@
 	<li class="tab col s3"><a class="" href="#edit-criteria">Edit Selection Criteria</a></li>
 	<li id="dsessions" class="tab col s2"><a class="" href="#edit-dsession">Edit Session</a></li>
 {% endblock tabs %}
+
+
 {% block tabs_content %}
 <!-- Removes tooltip from card -->
 <style type="text/css">
@@ -135,12 +253,14 @@
 {% endblock tabs_content %}
 {% block scripts %}
 
+	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/manage.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script type="text/javascript" src="{% static 'download/download.js' %}"></script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
+			Search.init();
 			ManageSession.init(['manage-dsession-students-form', 'edit-dcriteria-form', 'edit-dsession-form']);
 			Mobile.init();
 			Download.request();
