--- a/ipu/templates/recruitment/manage_dissociation.html
+++ b/ipu/templates/recruitment/manage_dissociation.html
@@ -9,10 +9,7 @@
 	<li class="divider"></li>
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
 	<li class="divider"></li>
-	<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock</a></li>
 {% else %}
-	<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Colleges</a></li>
-	<li class="divider"></li>
 {% endif %}
 {% endblock %}
 
@@ -61,19 +58,15 @@
 {% endblock %}
 
 {% block side_nav_links %}
-	<li><a class="waves-effect" href="#!"><i class="fa fa-home" aria-hidden="true"></i>
-            Home</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-building" aria-hidden="true"></i>
-          Create Dummy Company</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-          Edit Dummy Company</a></li>      
-    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i> 
-          Create Dummy Session</a></li>
-    <li><a class="waves-effect" href="#!"><i class="fa fa-pencil" aria-hidden="true"></i>
-	Edit Criteria</a></li>     
-    <li><a class="waves-effect" href="#!"><i class="fa fa-clock-o" aria-hidden="true"></i>
-            Dummy Sessions</a></li>
-         
+    <li data-main_div="#view-dissociation-div"><a class="waves-effect" href="#!" style="">{{ other_plural|title }} Blocked</a></li>
+    <li data-main_div="#create-dissociation-div"><a class="waves-effect" href="#!" style="">Block {{ other_plural|title }}</a></li>
+	<li><div class="divider"></div></li>
+	{% if user.type == 'C' %}
+		<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
+		<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
+		<li><div class="divider"></div></li>
+	{% endif %}
+ 
 {% endblock %}
 
 {% block tabs %}
@@ -84,6 +77,7 @@
 {% block tabs_content %}
 <!--                                     -->
 <div id="view-dissociation-div" class="col s12 m10 offset-m1">
+	<h4 class="center" style="color: goldenrod;">{{ other_plural|title }} Blocked</h4>
 	<ul class="collection">
 		{% csrf_token %}
 		{% for d in dissociations %}
@@ -123,11 +117,13 @@
 <!--                                     -->
 {% endblock tabs_content %}
 {% block scripts %}
+	<script type="text/javascript" src="{% static 'common/search.js' %}"></script>
 	<script type="text/javascript" src="{% static 'recruitment/manage_dissociation.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script src="{% static 'sweetalert/dist/sweetalert.min.js' %}"></script>
 	<script>
 		$(document).ready(function() {
+			Search.init();
 			Dissociation.init();
 			Mobile.init();
 		});
