--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -63,7 +63,7 @@
  {% endblock %}
 
 {% block menu_icon_dropdown %}
-	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>
+<!--	<li><a href = "javascript:void(0)" onclick = "document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>-->
     <li class="divider"></li>
     {% if student.resume %}
     <li><a href = "javascript:void(0)" onclick = "document.getElementById('light4').style.display='flex';document.getElementById('fade4').style.display='flex'">Uploaded resume</a></li>
@@ -137,7 +137,7 @@
     {% if student.resume %}
 	    <li><a href="javascript:void(0)" onclick="document.getElementById('light4').style.display='flex';document.getElementById('fade4').style.display='flex'">View Resume</a></li>
     {% endif %}
-	<li><a href="javascript:void(0)" onclick="document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>
+<!--	<li><a href="javascript:void(0)" onclick="document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>-->
 	<li><a class="waves-effect" id="m-report-form-anchor" href="{% url 'report' %}">Contact Admin</a></li>
 {% endblock %}
 
