--- a/ipu/templates/student/qualifications.html
+++ b/ipu/templates/student/qualifications.html
@@ -182,6 +182,7 @@ nav .button-collapse {
 			<a class="left btn-floating btn-large waves-effect waves-light blue continue-btn" href="#" onclick="$('#qualifications-tabs').tabs('select_tab', 'twelfth');" data-tooltip="Twelfth" data-delay="50ms" data-position="top"><i class="material-icons">keyboard_arrow_left</i></a>
 			<h4 class="center-align" style="color: lightcoral; margin-top: 40px">Other Qualifications</h4>
 			<form>{% form form=qual_form %}{% endform %}</form>
+			<p>Note: If you are a B.Tech. student, you can find your graduation percentage by using this <a href="https://facebook.com/ipuresultsbot" target="_blank">Facebook Messenger Chatbot.</a></p>
 		</div>
 		<!-- End Grad -->
 		<!-- Submit -->
