--- a/ipu/templates/company/home.html
+++ b/ipu/templates/company/home.html
@@ -46,7 +46,7 @@
 {% block menu_icon_dropdown %}
 	<li><a href="{% url 'manage_dissociation' %}">Block/Unblock Colleges</a></li>
 	<li class="divider"></li>
-	<li><a href="#">Report</a></li>
+	<li><a href="#">Report Admin</a></li>
     <li class="divider"></li>
 {% endblock %}
 
@@ -98,7 +98,7 @@
       </li>
 	<li><div class="divider"></div></li>
 	<li><a href="{% url 'manage_dissociation' %}">Block/Unblock Colleges</a></li>
-	<li><a href="#">Report Admin</a></li>
+	<li data-main_div="#!"><a href="#">Report Admin</a></li>
 {% endblock %}
 
 
