--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -39,7 +39,7 @@
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
     <li class="divider"></li>
 	{% endif %}
-    <li><a href="#">Report</a></li>
+    <li><a href="#">Report Admin</a></li>
 {% endblock %}
 
 {% block user_name_card_s %}
@@ -115,7 +115,7 @@
 	<li><div class="divider"></div></li>
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
 	{% endif %}
-	<li><a href="#">Report Admin</a></li>
+	<li data-main_div="#!"><a href="#">Report Admin</a></li>
 	<li><div class="divider"></div></li>
 {% endblock %}
 
