--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -125,7 +125,7 @@
 	<li><a href="{% url 'manage_faculty' %}" >Manage Faculty</a></li>
 	<li><a href="{% url 'manage_dcompany' %}" >Manage Dummy Company</a></li>
 	<li><a href="{% url 'manage_dissociation' %}" >Block/Unblock Companies</a></li>
-	<li><a href="#">Report Admin</a></li>
+	<li data-main_div="#!"><a href="#">Report Admin</a></li>
 	<li><div class="divider"></div></li>
 {% endblock %}
 
