--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -138,7 +138,7 @@
 	    <li><a href="javascript:void(0)" onclick="document.getElementById('light4').style.display='flex';document.getElementById('fade4').style.display='flex'">View Resume</a></li>
     {% endif %}
 <!--	<li><a href="javascript:void(0)" onclick="document.getElementById('light3').style.display='flex';document.getElementById('fade3').style.display='flex'">Contact College</a></li>-->
-	<li><a class="waves-effect" id="m-report-form-anchor" href="{% url 'report' %}">Contact Admin</a></li>
+	<li data-main_div="#!"><a class="waves-effect" id="m-report-form-anchor" href="{% url 'report' %}">Contact Admin</a></li>
 {% endblock %}
 
 {% block tabs %}
