--- a/ipu/templates/student/unverified.html
+++ b/ipu/templates/student/unverified.html
@@ -118,6 +118,7 @@
 		<div class="col s12 m10 offset-m1">
 			<h3 class="teal lighten-5 teal-text text-darken-3 center">You're almost there!</h3>
 			<p class="teal-text flow-text center">Now, all you need to do is get your profile and qualifications verified by your college's faculty.</p>
+			<p style="font-size: 17px" class="center flow-text col s12 blue-text text-darken-4 blue lighten-5"><b>Note: </b>You will be able to upload/update Resume and Photo after verification.<br></p>
 			<div class="divider row"></div>
 			<div id="qualifications-text" class="center-align">
 				<p class="red-text text-lighten-3 flow-text"><b>Tenth: </b>{{ tenth }}%</p>
