--- a/ipu/templates/account/set_password.html
+++ b/ipu/templates/account/set_password.html
@@ -17,8 +17,8 @@
 			<p class="center flow-text blue-text">If you're viewing this page after clicking the reset link sent to your registered email address, then chances are that the reset link has expired.<br>Please try resetting again by clicking <b><a href="{% url 'forgot_password' %}">here</a></p></b>
 		{% else %}
 		<div id="password-reset-form-div" class="row" style="min-height: 477px;">
-			<h4 class="col s12">Set Password</h4>
-			<form class="col s12" action="{% url 'reset_password' user_hashid=user_hashid token=token %}" method='POST' id="password-reset-form">
+			<h4 class="col s12 m10 offset-m1 l8 offset-l2">Set Password</h4>
+			<form class="col s12 m10 offset-m1" action="{% url 'reset_password' user_hashid=user_hashid token=token %}" method='POST' id="password-reset-form">
 				{% csrf_token %}
 				{% form form=password_reset_form %}{% endform %}
 				<div class="col s12">
