--- a/ipu/templates/account/set_usable_password_activation.html
+++ b/ipu/templates/account/set_usable_password_activation.html
@@ -17,8 +17,8 @@
 			<p class="center flow-text blue-text">If you're viewing this page after clicking the reset link sent to your registered email address, then chances are that the link has already been used.<br>If you don't recognize this activity, then we suggest that you should change your password immediately.</p></b>
 		{% else %}
 		<div id="set-password-form-div" class="row" style="min-height: 477px;">
-			<h4 class="col s12">Set Password</h4>
-			<form class="col s12" action="{% url 'usable_pwd_activation' user_hashid=user_hashid token=token %}" method='POST' id="set-password-form">
+			<h4 class="col s12 m10 offset-m1 l8 offset-l2">Set Password</h4>
+			<form class="col s12 m10 offset-m1" action="{% url 'usable_pwd_activation' user_hashid=user_hashid token=token %}" method='POST' id="set-password-form">
 				{% csrf_token %}
 				{% form form=set_password_form %}{% endform %}
 				<div class="col s12">
