--- a/ipu/templates/faculty/edit_create.html
+++ b/ipu/templates/faculty/edit_create.html
@@ -4,20 +4,19 @@
 {% block title %}Profile{% endblock %}
 {% block content %}
 		<div class="row">
-			<div class="col s6 m12">
-			<h4> Edit Profile </h4>
+			<div class="col s12 m10 offset-m1 l8 offset-l2">
+			<h4 class="center-align"> Edit Profile </h4>
 			<br><br>
-			<form enctype="multipart/form-data" action="{% url 'edit_create_faculty' %}" method='POST' id='edit-create-faculty'>
+			<form enctype="multipart/form-data" action="{% url 'edit_create_faculty' %}" method='POST' id='edit-create-faculty' class="col s12 m10 offset-m1">
 				{% csrf_token %}
 				{% form form=faculty_edit_create_form %}{% endform %}
 			</div>
 		</div>
 		<div class="row">
-			<div class="col s6 m12">
+			<div class="col s12 m10 offset-m1">
 				<button type="submit" name="student_profile" class="btn waves-effect waves-light"> Update Profile </button>
 			</div>
 		</div>
 		</form>
 		<br />
-		<p> <a href="{% url 'faculty_home' %}"> Go Home </a></p>
 {% endblock %}
