--- a/ipu/templates/college/association_requests.html
+++ b/ipu/templates/college/association_requests.html
@@ -51,6 +51,7 @@
 					<p> <b>Programme:</b> {{ ass.obj.programme }}</p>
 					<p> <b>Streams:</b> {{ ass.streams }}</p>
 					<p> <b>Salary:</b> {{ ass.obj.salary }} LPA</p>
+					<p> <b>Details:</b> {{ ass.obj.desc }}</p>
 				</div>
 				<div class="card-action yellow-text">
 					<a class="waves-effect waves-light btn" href=" {% url 'createsession' %}?ass={{ ass.hashid }}">Accept</a>
