--- a/ipu/templates/college/dsessions_snippet.html
+++ b/ipu/templates/college/dsessions_snippet.html
@@ -4,15 +4,11 @@
 		{% for dsession in dsessions %}
 			<li class="collection-item avatar" data-sess="{{ dsession.dsess_hashid }}">
 				<span class="title blue-text text-accent-2"><b>{{ dsession.dcompany }}</b> for {{ dsession.type }}</span>
-				<p>
-					<b>Salary: </b>{{ dsession.salary }}
-					<br>
-					<p>
-						<b>Streams: </b>{{ dsession.streams }}
-					</p>
-					<br>
-						<b><span class="orange-text text-darken-2">{{ dsession.students }}</span></b> student{{ dsession.students|pluralize }} in the session
-				</p>
+				<p><b>Salary: </b>{{ dsession.salary }}</p>
+				<p><b>Programme: </b>{{ dsession.programme }}</p>
+				<p><b>Streams: </b>{{ dsession.streams }}</p>
+				<p><b>Years: </b>{{ dsession.years }}</p>
+				<p><b><span class="orange-text text-darken-2">{{ dsession.students }}</span></b> student{{ dsession.students|pluralize }} in the session</p>
 				<span class="secondary-content">
 					<a href="{% url 'manage_dsession' dsession.dsess_hashid %}"><i class="fa fa-2x fa-cogs"></i></a>
 					<a href="{% url 'notify_dsession' dsession.dsess_hashid %}" class="envelope"><i class="fa fa-2x fa-envelope"></i></a>
