--- a/ipu/templates/company/association_requests.html
+++ b/ipu/templates/company/association_requests.html
@@ -50,6 +50,7 @@
 					<p> <b>Programme:</b> {{ ass.obj.programme }}</p>
 					<p> <b>Streams:</b> {{ ass.streams }}</p>
 					<p> <b>Salary:</b> {{ ass.obj.salary }} LPA</p>
+					<p> <b>Details:</b> {{ ass.obj.desc }}</p>
 				</div>
 	
 				<div class="card-action yellow-text">
