--- a/ipu/templates/company/mysessions.html
+++ b/ipu/templates/company/mysessions.html
@@ -19,15 +19,11 @@
 				<img src="{{ session.photo.url }}" alt="College" class="circle" />
 			{% endif %}
 			<span class="title blue-text text-accent-2"><b>{{ session.type|title }}</b> at {{ session.college }}</span>
-			<p>
-				<b>Salary: </b>{{ session.salary }}
-				<br>
-				<p>
-					<b>Streams: </b>{{ session.streams }}
-				</p>
-				<br>
-					<b><span class="orange-text text-darken-2">{{ session.students }}</span></b> student{{ session.students|pluralize }} in the session
-			</p>
+			<p><b>Salary: </b>{{ session.salary }}</p>
+			<p><b>Programme: </b>{{ session.programme }}</p>
+			<p><b>Streams: </b>{{ session.streams }}</p>
+			<p><b>Years: </b>{{ session.years }}</p>
+			<p><b><span class="orange-text text-darken-2">{{ session.students }}</span></b> student{{ session.students|pluralize }} in the session</p>
 			<span class="secondary-content">
 				<a href="{% url 'manage_session' session.sess_hashid %}"><i class="fa fa-2x fa-cogs"></i></a>
 				<a href="{% url 'excel' session.sess_hashid %}" class="excel"><i class="fa fa-2x fa-file-excel-o"></i></a>
@@ -46,6 +42,6 @@
 {% endif %}
 <script>
 	$(".session-filter-forms-sideNav").sideNav();
-	$('#sessions').find('.fa-cogs').tooltip({tooltip: 'Settings', delay: 0});
-	$('#sessions').find('.fa-file-excel-o').tooltip({tooltip: 'Excel', delay: 0});
+	$('#sessions_div').find('.fa-cogs').tooltip({tooltip: 'Settings', delay: 0});
+	$('#sessions_div').find('.fa-file-excel-o').tooltip({tooltip: 'Excel', delay: 0});
 </script>
