--- a/ipu/templates/dummy_company/dcompanies_in_my_college.html
+++ b/ipu/templates/dummy_company/dcompanies_in_my_college.html
@@ -2,7 +2,7 @@
 	{% with e.dsess as enrolled %}
 		<div class="card sticky-action">
 			<div class="card-image waves-effect waves-block waves-light">
-				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'lightcoral' 'seagreen' 'goldenrod' 'cornflowerblue' %}" />
+				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'goldenrod' 'lightcoral' 'seagreen' 'cornflowerblue' %}" />
 			</div>
 			<div class="card-content">
 				<span class="card-title activator grey-text text-darken-4">
@@ -17,16 +17,15 @@
 			</div>
 			<div class="card-reveal">
 				<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
-				<p>Programme: {{ enrolled.programme.name }}</p>
-				<p>
-					Streams: 
+				<p><b>Programme:</b> {{ enrolled.programme.name }}</p>
+				<p><b>Streams:</b>
 					{% for stream in enrolled.streams.all %}
 						{{ stream.name }}, 
 					{% endfor %}
 				</p>
-				<p>{{ enrolled.desc }}</p>
-				<p> Company Details: {{ enrolled.dummy_company.details }} </p>
-				<p> Website: <a target="_blank" href="{{ enrolled.dummy_company.website }}">{{ enrolled.dummy_company.website }}</a></p>
+				<p><b>Description: </b>{{ enrolled.desc }}</p>
+				<p><b>Company Details:</b> {{ enrolled.dummy_company.details }} </p>
+				<p><b>Website:</b> <a target="_blank" href="{{ enrolled.dummy_company.website }}">{{ enrolled.dummy_company.website }}</a></p>
 				{% include 'recruitment/criteria.html' with criterion=enrolled.selection_criteria %}
 			</div>
 		</div>
@@ -35,7 +34,7 @@
 	{% with u.dsess as unenrolled %}
 		<div class="card sticky-action">
 			<div class="card-image waves-effect waves-block waves-light">
-				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'cornflowerblue' 'goldenrod' 'lightcoral' 'seagreen' %}" />
+				<img class="activator" height=250 width=250 src="#" style="background-color:{% cycle 'lightcoral' 'goldenrod' 'cornflowerblue' 'seagreen' %}" />
 			</div>
 			<div class="card-content">
 				<span class="card-title activator grey-text text-darken-4">
@@ -50,16 +49,15 @@
 			</div>
 			<div class="card-reveal">
 				<span class="card-title grey-text text-darken-4"><b>Details</b><i class="material-icons right">close</i></span>
-				<p>Programme: {{ unenrolled.programme.name }}</p>
-				<p>
-					Streams: 
+				<p><b>Programme:</b> {{ unenrolled.programme.name }}</p>
+				<p><b>Streams:</b>
 					{% for stream in unenrolled.streams.all %}
 						{{ stream.name }}
 					{% endfor %}
 				</p>
-				<p>{{ unenrolled.desc }}</p>
-				<p> Company Details: {{ unenrolled.dummy_company.details }} </p>
-				<p> Website: <a target="_blank" href="{{ enrolled.dummy_company.website }}">{{ enrolled.dummy_company.website }}</a></p>
+				<p><b>Description: </b>{{ unenrolled.desc }}</p>
+				<p><b>Company Details:</b> {{ unenrolled.dummy_company.details }} </p>
+				<p><b>Website:</b> <a target="_blank" href="{{ unenrolled.dummy_company.website }}">{{ unenrolled.dummy_company.website }}</a></p>
 				{% include 'recruitment/criteria.html' with criterion=unenrolled.selection_criteria %}
 			</div>
 		</div>
