--- a/ipu/templates/student/mysessions.html
+++ b/ipu/templates/student/mysessions.html
@@ -6,20 +6,17 @@
 			{% if not session.is_dummy and session.photo %}
 				<img src="{{ session.photo.url }}" alt="Recruiter" class="circle" />
 			{% endif %}
-			<span class="title blue-text text-accent-2"><b>{{ session.company }}</b> for {{ session.type|title }} </span>
-			<p>
-				<b>Salary: </b>{{ session.salary }}
-				<br>
-				<p>
-					<b>Streams: </b>{{ session.streams }}
-				</p>
-				<br>
-					<b><span class="orange-text text-darken-2">{{ session.students }}</b> student{{ session.students|pluralize }} in the session
-			</p>
+			<span class="title blue-text text-accent-2"><b>{{ session.company }}</b> for {{ session.type|title }}</span>
+			<p><b>Salary: </b>{{ session.salary }}</p>
+			<p><b>Programme: </b>{{ session.programme }}</p>
+			<p><b>Streams: </b>{{ session.streams }}</p>
+			<p><b>Years: </b>{{ session.years }}</p><br>
+			<p><b>Status: </b>{{ sessobj.status }}</p>
+			<p><b><span class="orange-text text-darken-2">{{ session.students }}</b> student{{ session.students|pluralize }} in the session</p>
 		</li>
 	{% endfor %}
 </ul>
 {% else %}
-	<p class="flow-text blue lighten-5 blue-text text-darken-4 center-align">All your placement sessions/drives, Internship or Job, that you enroll in, will be displayed here.<b></b></p>
-	<b><h1 class="center flow-text teal-text text-accent-4">You are currently not enrolled in any sessions.</h1></b>
+	<p style="font-size: 20px" class="col s12 m10 offset-m1 flow-text blue lighten-5 blue-text text-darken-4 center-align">All your placement sessions/drives, Internship or Job, that you apply for, will be displayed here once their application deadline is over.<br>Being in a session means that you are a part of that placement drive.<br><b>Note: </b>If your participation in a session/drive gets over, you'll no longer see that session.</p>
+	<p class="col s12 center flow-text teal-text text-accent-4">You are currently not enrolled in any sessions.</p>
 {% endif %}
