notify all students & pdf bugs

--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -4,6 +4,7 @@
 
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
+	<link type="text/css" rel="stylesheet" href="{% static 'faculty/home.css' %}" /> 
 {% endblock %}
 
 {% block user_photo %}
