--- a/ipu/templates/student/home.html
+++ b/ipu/templates/student/home.html
@@ -4,7 +4,12 @@
 {% block head %}<link type="text/css" rel="stylesheet" href="{% static 'materialize-blue.css' %}" />
 <link type="text/css" rel="stylesheet" href="{% static 'student/home.css' %}" />
 <link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
-
+<style type="text/css">
+	#iframepdf
+	{
+		min-width: 50%;
+	}
+</style>
 {% endblock %}
 {% block user_photo %}
 	{% if student.photo %}
@@ -54,7 +59,7 @@
  {% block lightbox_data2 %}
         <div id="light4" class="white_content4">
         {% if student.resume %}
-            <embed src="{{ student.resume.url }}" width="100%" height="1200px"/>
+            <iframe id="iframepdf" src="{{ student.resume.url }}" width="auto" height="1200px"/></iframe>
         {% endif %}    
             <a href = "javascript:void(0)" onclick = "document.getElementById('light4').style.display='none'; document.getElementById('fade4').style.display='none'; "><i class="fa fa-times fa-2x"></i></a>
         </div>
