--- a/ipu/templates/dummy_company/dcompanies_in_my_college.html
+++ b/ipu/templates/dummy_company/dcompanies_in_my_college.html
@@ -23,8 +23,8 @@
 						{{ stream.name }}, 
 					{% endfor %}
 				</p>
-				<p><b>Description: </b>{{ enrolled.desc }}</p>
-				<p><b>Company Details:</b> {{ enrolled.dummy_company.details }} </p>
+				<p><b>Description: </b>{{ enrolled.desc|linebreaksbr }}</p>
+				<p><b>Company Details:</b> {{ enrolled.dummy_company.details|linebreaksbr }} </p>
 				<p><b>Website:</b> <a target="_blank" href="{{ enrolled.dummy_company.website }}">{{ enrolled.dummy_company.website }}</a></p>
 				{% include 'recruitment/criteria.html' with criterion=enrolled.selection_criteria %}
 			</div>
@@ -52,11 +52,11 @@
 				<p><b>Programme:</b> {{ unenrolled.programme.name }}</p>
 				<p><b>Streams:</b>
 					{% for stream in unenrolled.streams.all %}
-						{{ stream.name }}
+						{{ stream.name }},
 					{% endfor %}
 				</p>
-				<p><b>Description: </b>{{ unenrolled.desc }}</p>
-				<p><b>Company Details:</b> {{ unenrolled.dummy_company.details }} </p>
+				<p><b>Description: </b>{{ unenrolled.desc|linebreaksbr }}</p>
+				<p><b>Company Details:</b> {{ unenrolled.dummy_company.details|linebreaksbr }} </p>
 				<p><b>Website:</b> <a target="_blank" href="{{ unenrolled.dummy_company.website }}">{{ unenrolled.dummy_company.website }}</a></p>
 				{% include 'recruitment/criteria.html' with criterion=unenrolled.selection_criteria %}
 			</div>
