--- a/ipu/templates/faculty/home.html
+++ b/ipu/templates/faculty/home.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 	<link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
-	<link type="text/css" rel="stylesheet" href="{% static 'faculty/home.css' %}" /> 
+	<link type="text/css" rel="stylesheet" href="{% static 'faculty/home.css' %}?ver=1" /> 
 {% endblock %}
 
 {% block user_photo %}
@@ -349,7 +349,7 @@
 	<script type="text/javascript" src="{% static 'common/sessions.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/settings.js' %}"></script>
 	<script type="text/javascript" src="{% static 'notification/faculty.js' %}"></script>
-	<script type="text/javascript" src="{% static 'faculty/verify.js' %}"></script>
+	<script type="text/javascript" src="{% static 'faculty/verify.js' %}?ver=1"></script>
 	<script type="text/javascript" src="{% static 'recruitment/requests.js' %}"></script>
 	<script type="text/javascript" src="{% static 'common/mobile.js' %}"></script>
 	<script type="text/javascript" src="{% static 'download/download.js' %}"></script>
