--- a/ipu/templates/college/home.html
+++ b/ipu/templates/college/home.html
@@ -3,7 +3,7 @@
 {% load material_form %}
 
 {% block head %}
-<link type="text/css" rel="stylesheet" href="{% static 'college/home.css' %}" /> 
+<link type="text/css" rel="stylesheet" href="{% static 'college/home.css' %}?ver=1" /> 
 <link rel="stylesheet" type="text/css" href="{% static 'sweetalert/dist/sweetalert.css' %}">
 
 {% endblock %}
